sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:2: error: Missing closing brace `}' assumed here
def combSort() {
^AlgCombSort:2: error: expected class or object definition
def combSort() {
^AlgCombSort:9: error: Missing closing brace `}' assumed here
    ecart=(ecart.toDouble / 1.3).toInt
    ^